--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,17 +1,22 @@
 
   name: bash-shell-rpg
   version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-  summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+  summary: A 2D open world action RPG to play on the command line. # 79 char long summary
   description: |
-    This a pretty cool RPG game with weapons, enemies and an objective,
+    This is a pretty cool RPG game with weapons, enemies and an objective,
     find your lost crown and your 2 childs in the middle of a forest
     with a bunch of creatures and interesting objects.
 
-  grade: stable # must be 'stable' to release into candidate/stable channels
+  grade: devel # must be 'stable' to release into candidate/stable channels
   confinement: devmode # use 'strict' once you have the right plugs and slots
+  
+  apps:
+    bash-shell-rpg:
+      command: RPG.sh
 
   parts:
-    my-part:
+    bash-shell-rpg:
       # See 'snapcraft plugins'
-      plugin: nil
+      source: https://github.com/raulojeda22/Bash-Shell-RPG
+      plugin: dump
   
