--- a/prime/meta/snap.yaml
+++ b/prime/meta/snap.yaml
@@ -1,5 +1,5 @@
 name: bash-shell-rpg
-version: '1.0'
+version: '1.1'
 summary: A 2D open world action RPG to play on the command line.
 description: |
   This is a pretty cool RPG game with weapons, enemies and an objective,
@@ -8,7 +8,7 @@ description: |
 architectures:
 - all
 confinement: strict
-grade: devel
+grade: stable
 apps:
   bash-shell-rpg:
     command: command-bash-shell-rpg.wrapper
